# Atelier_CMAKE

./: CMakeLists.txt
.github/workflows/: tests.yml
include/: calculator.h
src/: main.c
src/lib/: calculator.c
